Fixes additional layout issues with global nav for small viewports

--- a/components/EorzeaProfile/EorzeaProfile.module.scss
+++ b/components/EorzeaProfile/EorzeaProfile.module.scss
@@ -70,3 +70,15 @@
     }
   }
 }
+
+@media (max-width: $screen-sm) {
+  .panel {
+    flex-direction: column;
+
+    .image {
+      margin-bottom: $spacing-base;
+      margin-right: 0;
+      width: 100%;
+    }
+  }
+}
